JPA 도입, API 수정